# pokeCardDetector

./: .gitignore  CMakeLists.txt  README.md  app.py  detect.py
OLD_Pythonic/: cardDB.py  environment.yml  test.py  testes.py
OLD_Pythonic/static/: all.css  db.js  detect.js  test.js
OLD_Pythonic/templates/: about.html  test.html  viewNoNav.html
include/: CardDatabase.hpp  CardDetector.hpp  CardStorage.hpp  WebServer.hpp
src/: CardDatabase.cpp  CardDetector.cpp  main.cpp
static/: all.css  db.js  detect.js  index.js  utils.js
templates/: about.html  db.html  detect.html  index.html  viewNoNav.html
